<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">欢迎使用此软件，请在下面登录/注册</string>
    <string name="app_name">Globalfifo系统</string>
    <string name="logon">登录</string>
    <string name="reg">注册</string>
    <string name="RegistMessage">个人信息注册</string>
    <string name="done">确定</string>
    <string name="cancel">取消</string>
    <string name="name">用户名：</string>
    <string name="password">密码：</string>
    <string name="begin">开始</string>  
    <string name="read">读取</string>
    <string name="write">写入</string>
    <string name="clear">清除</string>
    <string name="exit">退出</string>
    <string name="about">关于</string>
    <string name="start"></string>
    <string name="login_success">恭喜您，注册成功！请登录</string>
    <string name="logon_success">恭喜您，登录成功！</string>
    <string name="logon_failed">对不起，密码错误，请重新登录！</string>
</resources>