<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="16dip"
    android:orientation="vertical" >
	<LinearLayout 
	    android:id="@+id/on"
	    android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:paddingLeft="16dip"
    	android:paddingTop="10dip"
    	android:paddingRight="16dip"
    	android:paddingBottom="10dip"
    	android:orientation="vertical">
    <TextView
        android:id="@+id/st"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="10dip"
        android:text="@string/start" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/bt"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/on"
    	android:paddingLeft="12dip"
    	android:paddingRight="12dip"
    	android:paddingBottom="10dip"
    	android:orientation="horizontal">
    <Button 
        android:id="@+id/read"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="6dip"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/read"/>
    <Button 
        android:id="@+id/write"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="6dip"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/write"/>
     <Button 
        android:id="@+id/clear"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="6dip"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/clear"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:layout_below="@id/bt"
    	android:paddingLeft="12dip"
    	android:paddingRight="12dip"
    	android:paddingBottom="10dip"
    	android:orientation="horizontal">
    <EditText
        android:id="@+id/content"
        android:layout_width="fill_parent"
     	android:layout_height="fill_parent"
		android:textSize="20px"
		android:singleLine="false"
		android:padding="5px"
        android:scrollbars="vertical"
        android:inputType="textMultiLine" >
     </EditText>
    </LinearLayout>
    
</RelativeLayout>