<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="16dip"
    android:orientation="vertical" >
	<LinearLayout 
	    android:id="@+id/on"
	    android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:paddingLeft="16dip"
    	android:paddingTop="10dip"
    	android:paddingRight="16dip"
    	android:paddingBottom="10dip"
    	android:orientation="vertical">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="10dip"
        android:text="@string/hello" />
    
    <EditText 
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:inputType="text"
        android:paddingBottom="10dip"
        android:layout_gravity="center"/>

    <EditText 
        android:id="@+id/usercode"
        android:password="true"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:inputType="textPassword"
        android:paddingTop="10dip"
        android:layout_gravity="center"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/on"
    	android:paddingLeft="12dip"
    	android:paddingRight="12dip"
    	android:paddingBottom="10dip"
    	android:orientation="horizontal">
    <Button 
        android:id="@+id/logon"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="6dip"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/logon"/>
    <Button 
        android:id="@+id/reg"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="6dip"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/reg"/>
        
    </LinearLayout>

</RelativeLayout>
